<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_label_outline"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_boletos"
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/menu_boletos" />
        <item
            android:id="@+id/nav_liquidacion"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_liquidacion" />

    </group>
    <item android:title="Informacion de Buses">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_buses"
                android:icon="@drawable/ic_directions_bus"
                android:title="@string/menu_buses" />
            <item
                android:id="@+id/nav_socios"
                android:icon="@drawable/ic_people"
                android:title="@string/menu_socios" />
            </group>
        </menu>
    </item>
    <item android:title="Cuenta">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_salir"
                    android:icon="@drawable/ic_close"
                    android:title="@string/menu_salir" />
            </group>
        </menu>
    </item>

</menu>
